// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render closed modal 1`] = `
<body>
  <div />
  <div />
</body>
`;

exports[`render open modal 1`] = `
.c7 {
  vertical-align: middle;
  height: 1.5rem;
  width: 1.5rem;
}

.c3 {
  box-sizing: border-box;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 1px solid #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  font-size: 1rem;
  font-weight: 400;
  height: 2.25rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  pointer-events: auto;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  white-space: nowrap;
  width: 100%;
  padding: 0 0.5rem;
  background-color: transparent;
  border-color: transparent;
  color: #3C64F4;
}

.c5:focus {
  outline: none;
}

.c5[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c5 + .bd-button {
  margin-left: 0.5rem;
}

.c5:active {
  background-color: #DBE3FE;
}

.c5:focus {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c5:hover:not(:active) {
  background-color: #F0F3FF;
}

.c5[disabled] {
  border-color: transparent;
  color: #D9DCE9;
}

.c6 {
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: inline-grid;
  grid-auto-flow: column;
  grid-gap: 0.5rem;
  visibility: visible;
}

.c0 {
  height: 100%;
  left: 0;
  position: fixed;
  top: 0;
  width: 100%;
  background: rgba(49,52,64,0.7);
}

.c1 {
  background: #FFFFFF;
  box-sizing: border-box;
  position: fixed;
  height: 100%;
  width: 100%;
}

.c4 {
  position: absolute;
  top: 0.25rem;
  right: 0.25rem;
}

@media (min-width:0px) {
  .c3 {
    padding: 1rem;
  }
}

@media (min-width:720px) {
  .c3 {
    padding: 2rem;
  }
}

@media (min-width:720px) {
  .c2 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

@media (min-width:720px) {
  .c5 {
    width: auto;
  }
}

@media (min-width:720px) {
  .c1 {
    border-radius: 0.25rem;
    box-shadow: 0px 2px 12px rgba(49,52,64,0.2);
    height: auto;
    left: 50%;
    max-height: 41.5rem;
    max-width: 720px;
    top: 50%;
    -webkit-transform: translate(-50%,-50%);
    -ms-transform: translate(-50%,-50%);
    transform: translate(-50%,-50%);
  }
}

@media (min-width:720px) {
  .c4 {
    display: none;
  }
}

<body>
  <div />
  <div>
    <div
      aria-modal="true"
      class="c0"
      role="dialog"
      tabindex="-1"
    >
      <div
        aria-labelledby="modal_header_0"
        class="c1 c2 c3"
        direction="column"
        wrap="nowrap"
      >
        <div
          class="c4"
        >
          <button
            class="bd-button c5"
            role="button"
            tabindex="0"
          >
            <span
              class="c6"
            >
              <svg
                class="c7"
                fill="currentColor"
                height="24"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="24"
              >
                <title>
                  Close
                </title>
                <path
                  d="M0 0h24v24H0V0z"
                  fill="none"
                />
                <path
                  d="M18.3 5.71a.996.996 0 00-1.41 0L12 10.59 7.11 5.7A.996.996 0 105.7 7.11L10.59 12 5.7 16.89a.996.996 0 101.41 1.41L12 13.41l4.89 4.89a.996.996 0 101.41-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
                />
              </svg>
            </span>
          </button>
        </div>
        This is a modal
      </div>
    </div>
  </div>
</body>
`;

exports[`render open modal without backdrop 1`] = `
<body>
  <div />
  .c7 {
  vertical-align: middle;
  height: 1.5rem;
  width: 1.5rem;
}

.c3 {
  box-sizing: border-box;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 1px solid #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  font-size: 1rem;
  font-weight: 400;
  height: 2.25rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  pointer-events: auto;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  white-space: nowrap;
  width: 100%;
  padding: 0 0.5rem;
  background-color: transparent;
  border-color: transparent;
  color: #3C64F4;
}

.c5:focus {
  outline: none;
}

.c5[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c5 + .bd-button {
  margin-left: 0.5rem;
}

.c5:active {
  background-color: #DBE3FE;
}

.c5:focus {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c5:hover:not(:active) {
  background-color: #F0F3FF;
}

.c5[disabled] {
  border-color: transparent;
  color: #D9DCE9;
}

.c6 {
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: inline-grid;
  grid-auto-flow: column;
  grid-gap: 0.5rem;
  visibility: visible;
}

.c0 {
  height: 100%;
  left: 0;
  position: fixed;
  top: 0;
  width: 100%;
}

.c1 {
  background: #FFFFFF;
  box-sizing: border-box;
  position: fixed;
  height: 100%;
  width: 100%;
}

.c4 {
  position: absolute;
  top: 0.25rem;
  right: 0.25rem;
}

@media (min-width:0px) {
  .c3 {
    padding: 1rem;
  }
}

@media (min-width:720px) {
  .c3 {
    padding: 2rem;
  }
}

@media (min-width:720px) {
  .c2 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

@media (min-width:720px) {
  .c5 {
    width: auto;
  }
}

@media (min-width:720px) {
  .c1 {
    border-radius: 0.25rem;
    box-shadow: 0px 2px 12px rgba(49,52,64,0.2);
    height: auto;
    left: 50%;
    max-height: 41.5rem;
    max-width: 720px;
    top: 50%;
    -webkit-transform: translate(-50%,-50%);
    -ms-transform: translate(-50%,-50%);
    transform: translate(-50%,-50%);
  }
}

@media (min-width:720px) {
  .c4 {
    display: none;
  }
}

<div>
    <div
      aria-modal="true"
      class="c0"
      role="dialog"
      tabindex="-1"
    >
      <div
        aria-labelledby="modal_header_0"
        class="c1 c2 c3"
        direction="column"
        wrap="nowrap"
      >
        <div
          class="c4"
        >
          <button
            class="bd-button c5"
            role="button"
            tabindex="0"
          >
            <span
              class="c6"
            >
              <svg
                class="c7"
                fill="currentColor"
                height="24"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="24"
              >
                <title>
                  Close
                </title>
                <path
                  d="M0 0h24v24H0V0z"
                  fill="none"
                />
                <path
                  d="M18.3 5.71a.996.996 0 00-1.41 0L12 10.59 7.11 5.7A.996.996 0 105.7 7.11L10.59 12 5.7 16.89a.996.996 0 101.41 1.41L12 13.41l4.89 4.89a.996.996 0 101.41-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
                />
              </svg>
            </span>
          </button>
        </div>
        This is a modal
      </div>
    </div>
  </div>
</body>
`;
